@@ -8,7 +8,6 @@ import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
@@ -16,15 +15,13 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
-
 public class SecurityConfig {
 
-    String [] PUBLIC_END_POINTS = {
-           "api/home",
+    String[] PUBLIC_END_POINTS = {
+            "api/home",
             "/media/images/**",
             "/media/videos/**",
             "/api/auth/login",
@@ -33,7 +30,6 @@ public class SecurityConfig {
             "/api/auth/logout",
             "/swagger-ui/**",
             "/api-docs/**",
-           // "/api/lectures/stream"
     };
 
     @Autowired
@@ -41,31 +37,20 @@ public class SecurityConfig {
     @Autowired
     private AuthEntryPointJwt unauthorizedHandler;
 
-
-
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
         return authConfig.getAuthenticationManager();
     }
 
-
     @Bean
     public SecurityFilterChain apiFilterChain(HttpSecurity http) throws Exception {
-
         http
-                .cors(Customizer.withDefaults())
-                .csrf(csrf-> csrf.disable())
-                .exceptionHandling((ex)-> ex.authenticationEntryPoint(unauthorizedHandler))
-
-                .sessionManagement((sm)-> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authorizeHttpRequests(auth-> auth.requestMatchers(PUBLIC_END_POINTS).permitAll())
-                 /*.authorizeHttpRequests((authorize) -> authorize
-                         .requestMatchers("/api/users").hasAnyAuthority("ADMIN")
-                 )*/
-
-                .authorizeHttpRequests(auth -> auth.anyRequest().authenticated())
-                //.authorizeHttpRequests(auth -> auth.anyRequest().permitAll())
-
+                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Set CORS configuration
+                .csrf(csrf -> csrf.disable())
+                .exceptionHandling(ex -> ex.authenticationEntryPoint(unauthorizedHandler))
+                .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authorizeHttpRequests(auth -> auth.requestMatchers(PUBLIC_END_POINTS).permitAll()
+                        .anyRequest().authenticated())
                 .httpBasic(Customizer.withDefaults())
                 .addFilterBefore(authFilter(), UsernamePasswordAuthenticationFilter.class);
 
@@ -73,10 +58,10 @@ public class SecurityConfig {
     }
 
     @Bean
-    CorsConfigurationSource corsConfigurationSource(){
+    CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:4200"));
-        configuration.setAllowedMethods(Arrays.asList("POST","GET","PUT","DELETE"));
+        configuration.setAllowedOrigins(List.of("http://localhost:4200"));
+        configuration.setAllowedMethods(List.of("POST", "GET", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
@@ -87,6 +72,4 @@ public class SecurityConfig {
     public AuthFilter authFilter() {
         return new AuthFilter();
     }
-
-
 }
